--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,8 @@
     <!-- 拨打电话权限 -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.VIBRATE"> </uses-permission>
-    <uses-permission android:name="android.permission.BATTERY_STATS"></uses-permission>
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.BATTERY_STATS" />
 
     <application
         android:allowBackup="true"
@@ -20,27 +19,34 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".ProgressActivity" />
-        <activity android:name=".Main2Activity"></activity>
-        <activity android:name=".CountDownActivity">
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".CountDownActivity" />
+        <activity android:name=".Main3Activity" />
+
+        <service android:name=".LongRunningService" />
+        <service android:name=".MusiceService" />
+
+        <receiver
+            android:name=".BatteryReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_CHANGED1" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".Main4Activity"></activity>
+        <activity android:name=".Main5Activity">
         </activity>
-        <activity android:name=".Main3Activity">
+        <activity android:name=".Main6Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".LongRunningService" />
-        <service android:name=".MusiceService"></service>
-        <receiver android:name=".BatteryReceiver"
-            android:enabled="true"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.BATTERY_CHANGED1"></action>
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
