--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -37,10 +38,11 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".Main4Activity"></activity>
-        <activity android:name=".Main5Activity">
-        </activity>
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main5Activity"></activity>
         <activity android:name=".Main6Activity">
+        </activity>
+        <activity android:name=".Main7Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
