--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -39,9 +39,8 @@
         </receiver>
 
         <activity android:name=".Main4Activity" />
-        <activity android:name=".Main5Activity"></activity>
-        <activity android:name=".Main6Activity">
-        </activity>
+        <activity android:name=".Main5Activity" />
+        <activity android:name=".Main6Activity"></activity>
         <activity android:name=".Main7Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Main8Activity"></activity>
     </application>
 
 </manifest>
